--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -1,39 +1,40 @@
 @use "../scss/abstracts/" as *;
 
+.info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 585px;
+  padding-right: 2rem;
+  .trace {
+    width: 60px;
+    height: 15px;
+  }
+  .greeting {
+    font-weight: 500;
+    font-size: 1.6rem;
+    .companyName {
+      color: $color-brand-1;
+    }
+  }
+  h2 {
+    font-size: 5.8rem;
+    font-weight: 700;
+    color: $color-grey-2;
+  }
+  p {
+    margin: 1rem 0;
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: $color-grey-3;
+  }
+}
 .welcomeSection {
   padding: 8rem 0;
   display: flex;
   justify-content: space-between;
   gap: 5rem;
-  .info {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    max-width: 585px;
-    padding-right: 2rem;
-    .trace {
-      width: 60px;
-      height: 15px;
-    }
-    .greeting {
-      font-weight: 500;
-      font-size: 1.6rem;
-      .companyName {
-        color: $color-brand-1;
-      }
-    }
-    h2 {
-      font-size: 5.8rem;
-      font-weight: 700;
-      color: $color-grey-2;
-    }
-    p {
-      margin: 1rem 0;
-      font-size: 1.6rem;
-      font-weight: 500;
-      color: $color-grey-3;
-    }
-  }
+
   .imagesContainer {
     position: relative;
     height: fit-content;
@@ -69,9 +70,48 @@
   }
 }
 
-.services{
+.services {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  padding: 5rem 0;
+}
+
+.aboutUs {
+  margin: 3rem 0;
+  .learnMore {
+    color: $color-brand-1;
+    font-weight: 600;
+    transition: 1s;
+    border: 1px solid transparent;
+    width: fit-content;
+    &:hover {
+      border-bottom: 1px solid;
+      animation: slideIn 1s;
+    }
+    @keyframes slideIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+  }
+  .projects {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 1.5rem;
+    justify-content: space-between;
+    gap: 1rem;
+    li {
+      p {
+        color: $color-grey-3;
+      }
+      span {
+        color: $color-brand-1;
+        font-size: 4rem;
+        font-weight: 700;
+      }
+    }
+  }
 }
