--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -80,6 +80,14 @@
 
 .aboutUs {
   margin: 3rem 0;
+  display: flex;
+  justify-content: space-between;
+  .greeting{
+    color: $color-grey-4;
+    font-weight: 500;
+    font-size: 1.5rem;
+
+  }
   .learnMore {
     color: $color-brand-1;
     font-weight: 600;
@@ -112,6 +120,15 @@
         font-size: 4rem;
         font-weight: 700;
       }
+    }
+  }
+  .aboutUsImgContainer{
+    position: relative;
+    .circles{
+      position: absolute;
+      bottom: -75px;
+      left: -75px;
+      z-index: -1;
     }
   }
 }
