our team section

--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -1,15 +1,16 @@
 @use "../scss/abstracts/" as *;
 
+.trace {
+  width: 60px;
+  height: 15px;
+}
 .info {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   max-width: 585px;
   padding-right: 2rem;
-  .trace {
-    width: 60px;
-    height: 15px;
-  }
+
   .greeting {
     font-weight: 500;
     font-size: 1.6rem;
@@ -82,11 +83,10 @@
   margin: 3rem 0;
   display: flex;
   justify-content: space-between;
-  .greeting{
+  .greeting {
     color: $color-grey-4;
     font-weight: 500;
     font-size: 1.5rem;
-
   }
   .learnMore {
     color: $color-brand-1;
@@ -107,28 +107,85 @@
       }
     }
   }
-  .projects {
+}
+.projects {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  li {
+    p {
+      color: $color-grey-3;
+    }
+    span {
+      color: $color-brand-1;
+      font-size: 4rem;
+      font-weight: 700;
+    }
+  }
+}
+.aboutUsImgContainer {
+  position: relative;
+  .circles {
+    position: absolute;
+    bottom: -75px;
+    left: -75px;
+    z-index: -1;
+  }
+}
+.ourTeam {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .headWrapper{
+    margin: 8rem 0 3rem 0;
+  }
+  .greeting {
+    font-weight: 400;
+    font-size: 1.6rem;
+    color: $color-grey-3;
+  }
+  h2 {
+    font-weight: 700;
+    font-size: 3.6rem;
+    color: $color-grey-3;
+  }
+  .teamContainer {
     display: flex;
-    justify-content: space-between;
     gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
     li {
-      p {
-        color: $color-grey-3;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      border-radius: 1rem;
+      box-shadow: 0px 12px 24px rgba(80, 80, 80, 0.07);
+      img {
+        transition: 0.5s;
+        border-radius: 1rem;
+        &:hover {
+          transform: scale(1.01);
+          border: 1px solid $color-brand-1;
+        }
       }
-      span {
-        color: $color-brand-1;
-        font-size: 4rem;
-        font-weight: 700;
+      .employeeInfo{
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+        padding: 1rem;
+        p:nth-child(1){
+          font-size: 1.6rem;
+          font-weight: 500;
+        }
+        p:nth-child(2){
+          font-size: 1.4rem;
+          font-weight: 500;
+        }
       }
     }
   }
-  .aboutUsImgContainer{
-    position: relative;
-    .circles{
-      position: absolute;
-      bottom: -75px;
-      left: -75px;
-      z-index: -1;
-    }
-  }
+}
+.testimonials{
+  background-color: $color-brand-3;
 }
