--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 
 $color-brand-1: #D91966;
 $color-brand-2: #E875A3;
+$color-brand-3: #FEF3F3;
 $color-white: #FFFFFF;
 $color-blue: #241348;
 $color-black: #060000;
