--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,8 @@
-@import './reset';
-@import './typography';
+@import "./reset";
+@import "./typography";
 
-main{
-    width: 90%;
-    margin: 0 auto;
+main {
+  width: 600px;
+  margin: 0 auto;
+  padding: 2rem;
 }
