--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -2,7 +2,7 @@
 
 :root {
   font-size: 60%;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 @media (min-width: 700px) {
@@ -19,12 +19,10 @@
   list-style: none;
 }
 
-body,
 html {
-  width: 100vw;
-  height: 100vh;
+  width: auto;
+  height: fit-content;
 }
-
 
 body {
   -webkit-font-smoothing: antialiased;
